<resources>
    <string name="app_name">WorkshopModule</string>
    <string name="login_text"><![CDATA[Login to Find & fix]]></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">I forgot password ?</string>
    <string name="new_user">New user</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="workshop_name">Workshop name</string>
    <string name="email">Email</string>
    <string name="workshop_phone">Workshop Phone</string>
    <string name="website">Website</string>
    <string name="select_location">Select Location</string>
    <string name="next_step">Next Step</string>
    <string name="step_1_of_5">Step 1 of 6</string>
    <string name="step_2_of_5">Step 2 of 6</string>
    <string name="step_3_of_5">Step 3 of 6</string>
    <string name="step_4_of_5">Step 4 of 6</string>
    <string name="step_5_of_5">Step 5 of 6</string>
    <string name="step_6_of_5">Step 6 of 6</string>
    <string name="tempspecializations">Specializations</string>
    <string name="workshop_specializations">workshop tempspecializations</string>
    <string name="workshop_sub_specializations">workshop subSpecialization</string>
    <string name="back">Back</string>
    <string name="working_time">Working time</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="please_upload_id">Please upload ID</string>
    <string name="normal_request">Normal Request</string>
    <string name="done">Done</string>
    <string name="in_progress">In Progress</string>
    <string name="happening_now">Happing now</string>
    <string name="current_request">Current Request</string>
    <string name="sent_offers">Sent Offers</string>
    <string name="requests_in_progress">requests in progress</string>
    <string name="you_have_complete">You have complete</string>
    <string name="requests">requests</string>
    <string name="you_added_an_offer_to_this_car">You added an offer to this car</string>
    <string name="wait_the_client_accepts_you">wait the client accepts you</string>
    <string name="show_location">Show Location</string>
    <string name="add_offer">Add Offer</string>
    <string name="complete_the_fixation">Complete the fixation</string>
    <string name="car_info">Car Info</string>
    <string name="offer_info">Offer Info</string>
    <string name="client_info">Client Info</string>
    <string name="description">Description</string>
    <string name="car_owner">Car Owner</string>
    <string name="start_chat">Start Chat</string>
    <string name="acceptted_requests">Acceptted requests</string>
    <string name="urgent_requests">Urgent Requests</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="info">info</string>
    <string name="location">location</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="uregnt_request">Urgent Request</string>
    <string name="add_advertisment">Add Advertisment</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_create_your_advertising_and_show_it">Let’s create your advertising and show it</string>
    <string name="where_ever_you_want_to_all_your_customer">where ever you want to all your customer</string>
    <string name="write_a_title_for_your_advertising">Write a title for your advertising</string>
    <string name="title">Title</string>
    <string name="next">Next</string>
    <string name="write_a_description_for_your_advertising">Write a description for your advertising</string>
    <string name="choose_country">Choose The Country and city that you target from it</string>
    <string name="let_your_advertising_reach_to_many_people">let your advertising reach to many people</string>
    <string name="choose_how_many_people_you_want_to">choose how many people you want to?</string>
    <string name="select_countries">Select Countries</string>
    <string name="ok">Ok</string>
    <string name="add_another_ads">Add another ads</string>
    <string name="information">Information</string>
    <string name="specialization">Specializations</string>
    <string name="submit">Submit</string>
    <string name="profile_editing">Profile Editing</string>
    <string name="you_edit_your_info_waiting_for_accepting_from_customer_service">You edit your info waiting for accepting from customer service</string>
    <string name="brands">Brands</string>
    <string name="start_engine">Start</string>
    <string name="start_journey">We hope you to have a satisfied journey</string>
    <string name="add_advertising">Add Advertising</string>
    <string name="advertising">Advertising</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="find_fix"><![CDATA[Find & Fix]]></string>
    <string name="my_advertisement">My Advertisement</string>
    <string name="type_your_message_here">Type Your Message here</string>
    <string name="write_your_description_to_add_your_offer">Write your description to add your offer</string>
    <string name="add_average_price">Add average price</string>
    <string name="sar">SAR</string>
    <string name="avg_date">Add Average Date</string>
    <string name="days">Days</string>
    <string name="send_offer">Send Offer</string>
    <string name="fill_data">Please Fill All Data</string>
    <string name="invalid_email_password">Invalid Email or Password</string>
    <string name="invalid_data">Invalid Data Format you must Enter Valid Email Or phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reqired_field">*This Field is Reuired</string>
    <string name="invalid_email_format">*Invalid Email Format</string>
    <string name="password_length">Required 8 Character at least</string>
    <string name="invalid_phone_format">Invalid Phone Format</string>
    <string name="invalid_site_url">Invalid Website Url</string>
    <string name="select_city">Please Select Your City</string>
    <string name="select_country">Please Choose Your Country</string>
    <string name="choose_location">Please Select Your Location Correctly</string>
    <string name="matches_password">Password and It\'s Confirmation must be matches</string>
    <string name="email_alredy_taken">This Email is Already Taken</string>
    <string name="choose_service">Choose Your Service</string>
    <string name="wensh">Wensh</string>
    <string name="service_provider">Service Provider</string>
    <string name="workshop_specializations_text">WorkShop Specializations</string>
    <string name="choose_brands">Choose Brands</string>
    <string name="empty_service_type">Please Choose Your Service Type</string>
    <string name="empty_workshop_specialization">Please Choose Your Specialization</string>
    <string name="empty_woekshop_brands">Please Choose Your Workshop Brands</string>
    <string name="empty_urgent_types">Please Choose Your Urgent Request Types</string>
    <string name="select_time">Select Time</string>
    <string name="choose_working_day">Please Choose Your Working Day</string>
    <string name="choose_pic_form_camera">Choose Pic Form Camera</string>
    <string name="choose_pic_form_gallery">Choose Pic Form Gallery</string>
    <string name="permission_denied">Permission is Denied</string>
    <string name="choose_image">Please Choose an Image</string>
    <string name="request_completed">Your Request Completed Successfully</string>
    <string name="need_winch">Need Winch</string>
    <string name="dont_need_winch">Doesn\'t need Winch</string>
    <string name="internet_connection">Please Check Your Internet Connection</string>
    <string name="cant_add_offer">Can\'t add Offer to this request now</string>
    <string name="cant_complete_offer">Can\'t Complete this request now</string>
    <string name="add_offer_desc">Please Add Description to your Offer</string>
    <string name="add_offer_price">Please Add Price To Your Offer</string>
    <string name="add_offer_date">Pleae Add Date To Your Offer</string>
    <string name="offer_add_successfully">Offer Added Successfully</string>
    <string name="update_offer">Update Offer</string>
    <string name="country">country</string>
    <string name="city">City</string>
    <string name="invalid_phone_number">This Phone Number Already Taken</string>
    <string name="choose_country_first">Please Choose Country First</string>
    <string name="journey">Find &amp; Fix is a journey Just Start Engine</string>
    <string name="unauthenticated">This is account is logged in from another device</string>
    <string name="profile_update_successfully">Profile Updated Successfully</string>
    <string name="thank_you_for_registeration">Thank you for Registeration</string>
    <string name="wait_the_activiation_process">Wait the activiation Process</string>
    <string name="from_our_support_team">From our support team</string>
    <string name="for_more_details_visit">For more details visit</string>
    <string name="cant_complete_your_request">Can\'t Complete Your Request</string>
    <string name="smaller_time">From Time Must be Smaller Than To Time</string>
    <string name="upload">Upload</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_find_fix"><![CDATA[About Find&Fix]]></string>
    <string name="logout">Logout</string>
    <string name="all_rights_recieved_findandfix_2018">All rights recieved FindandFix 2018</string>
    <string name="upload_your_advertising_picture">Upload your Advertising picture</string>
    <string name="workshop_information">Workshop information</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="please_write_your_current_password">Please Write Your Current Password</string>
    <string name="send_to">Send To</string>
    <string-array name="themes">
        <item>Theme1</item>
        <item>Theme2</item>
    </string-array>
    <string name="OK">OK</string>
    <string name="def_theme">Theme1</string>
    <string name="theme_summary">Appearance</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="Home">Home</string>
    <string name="password_updated">Password Updasted Successfully</string>
    <string name="invalid_current_password">Current Password is Invalid</string>
    <string name="delete_offer">Delete Offer</string>
    <string name="offer_deleted_successfully">Offer Deleted Successfully</string>
    <string name="about"><![CDATA[About Find & Fix]]></string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="account">Account</string>
    <string name="deactivate">Deactivate</string>
    <string name="sign_out">Sign Out</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="all_right_recevied_find_and_fix_2018">All Right recevied © Find and Fix 2018</string>
    <string name="add_adv_title">Please Add Title To Your Adv</string>
    <string name="choose_city">Choose City</string>
    <string name="select_country_city"><![CDATA[Please Select Country & City]]></string>
    <string name="choose_country_for_city">Please Choose Country First</string>
    <string name="select_range">Select Range</string>
    <string name="ranges">Ranges</string>
    <string name="updates_submitted_successfully">Your updates submitted successfully and waiting for approval.</string>
    <string name="achievments">Achievements</string>
    <string name="no_requests_yet">No Requests Yet</string>
    <string name="my_adv">My Advertisement</string>
    <string name="more">more</string>
</resources>