<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data></data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/dp41h">


    <TextView
        android:id="@+id/tv_complete_request_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21.7sp"
        android:fontFamily="sans-serif-black"
        android:textStyle="normal"
        android:textColor="@color/blacklightcolor"
        android:gravity="center_horizontal"
        android:text="@string/you_have_complete"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv_complete_request_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_complete_request_txt"
        android:textSize="21.7sp"
        android:fontFamily="sans-serif-black"
        android:textStyle="normal"
        android:textColor="@color/redColor"
        android:gravity="center_horizontal"
        android:text="15"
        android:layout_marginTop="@dimen/dp7h"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv_request_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21.7sp"
        android:fontFamily="sans-serif-black"
        android:textStyle="normal"
        android:textColor="@color/blacklightcolor"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tv_complete_request_num"
        android:layout_marginTop="@dimen/dp7h"
        android:text="@string/urgent_requests"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif-black"
        android:textStyle="normal"
        android:textColor="@color/blacklightcolor"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tv_request_txt"
        android:layout_marginTop="@dimen/dp10h"
        android:layout_marginStart="@dimen/dp10h"
        android:text="@string/more"
        android:layout_alignParentStart="true"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/tv_more"
        android:id="@+id/rv_urgent_completed_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp30h"
        android:layout_marginBottom="@dimen/dp15h"
        tools:listitem="@layout/item_completed_urgent_request_layout"/>


    <ImageView
        android:id="@+id/iv_no_Requests"
        android:layout_width="@dimen/dp121w"
        android:layout_height="@dimen/dp121w"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/contract"
        android:layout_marginTop="@dimen/dp78w"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_no_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_no_Requests"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="@dimen/sp18"
        android:textColor="@color/no_items_found"
        android:layout_marginTop="@dimen/dp70h"
        android:text="@string/no_requests_yet"
        android:visibility="gone"/>

</RelativeLayout>
</layout>