<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp270w"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="@dimen/dp26h"
    android:layout_marginStart="@dimen/dp26h"
    app:cardCornerRadius="@dimen/dp6h">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwhite">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp30h"
            android:background="@color/orangecolor"
            android:id="@+id/fl_text"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colorwhite"
                android:text="@string/profile_editing"

                />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_submit_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18.3sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/dp35w"
            android:layout_below="@+id/fl_text"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/colorgray"
            android:gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp36h"
            android:layout_marginEnd="@dimen/dp36h"
            android:text="@string/you_edit_your_info_waiting_for_accepting_from_customer_service"
            />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="@dimen/dp123h"
            android:layout_height="@dimen/dp32h"
            android:layout_marginTop="@dimen/dp41w"
            android:layout_marginBottom="@dimen/dp32h"
            android:layout_below="@+id/tv_submit_editing"
            android:background="@drawable/button_edit_profile_background"
            android:layout_centerHorizontal="true"
            android:text="@string/ok"
            android:textColor="@color/colorwhite"
            android:textSize="12.7sp"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            android:textAllCaps="false"

            />


    </RelativeLayout>
</android.support.v7.widget.CardView>